[package]
name = "louvain"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.3"
indexmap = "2.2.6"
log = "0.4.22"
mpi = { version = "0.8.0", features = ["derive"] }
petgraph = {version = "0.6.5", default-features = false}

[lib]
name = "distributed_louvain"
path = "src/lib.rs"

[[test]]
name = "mpi_tests"
path = "tests/mpi_tests.rs"
harness = false
